Added routes and controllers for users, lists and userbooks
